objects/CAPGlobalMasterData__c.object
<CustomObject>
    <fields>
        <fullName>AnswerInterpretation1__c</fullName>
        <label>Answer Interpretation1</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AnswerInterpretation2__c</fullName>
        <label>Answer Interpretation2</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AnswerInterpretation3__c</fullName>
        <label>Answer Interpretation3</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ClassificationLevel1__c</fullName>
        <label>Classification Level 1</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>BM</fullName>
                </value>
                <value>
                    <fullName>Default</fullName>
                </value>
                <value>
                    <fullName>EU</fullName>
                </value>
                <value>
                    <fullName>FI</fullName>
                </value>
                <value>
                    <fullName>IG</fullName>
                </value>
                <value>
                    <fullName>LC</fullName>
                </value>
                <value>
                    <fullName>OM</fullName>
                </value>
                <value>
                    <fullName>PB</fullName>
                </value>
                <value>
                    <fullName>RT</fullName>
                </value>
                <value>
                    <fullName>SC</fullName>
                </value>
                <value>
                    <fullName>SI</fullName>
                </value>
                <value>
                    <fullName>SP</fullName>
                </value>
                <value>
                    <fullName>VR</fullName>
                </value>
                <value>
                    <fullName>WD</fullName>
                </value>
                <value>
                    <fullName>XX</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QuestionInterpretation__c</fullName>
        <label>Question Interpretation</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QuestionSequence__c</fullName>
        <label>Question Sequence</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Q1</fullName>
                </value>
                <value>
                    <fullName>Q2</fullName>
                </value>
                <value>
                    <fullName>Q3</fullName>
                </value>
                <value>
                    <fullName>Q4</fullName>
                </value>
                <value>
                    <fullName>Q5</fullName>
                </value>
                <value>
                    <fullName>Q6</fullName>
                </value>
                <value>
                    <fullName>Q7</fullName>
                </value>
                <value>
                    <fullName>Q8</fullName>
                </value>
                <value>
                    <fullName>Default</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tech_UniqueGlobalData__c</fullName>
        <label>Tech_UniqueGlobalData</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Weight__c</fullName>
        <label>Weight</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Account Master Profile Global MasterData</label>
    <nameField>
        <displayFormat>CAPGM-{0000}</displayFormat>
        <label>CAP Global Master Data Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Master Profile Global MasterData</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>CAP_VR_Q316SLS01_MasterDataValidate</fullName>
        <active>true</active>
        <errorConditionFormula>NOT($User.BypassVR__c ) &amp;&amp;  ISBLANK(TEXT(ClassificationLevel1__c)) &amp;&amp; ISBLANK(AnswerInterpretation1__c) &amp;&amp; ISBLANK(AnswerInterpretation2__c) &amp;&amp; ISBLANK(AnswerInterpretation3__c) &amp;&amp; ISBLANK(AnswerInterpretation4__c) &amp;&amp; ISBLANK(TEXT(Weight__c)) &amp;&amp; ISBLANK(QuestionInterpretation__c) &amp;&amp; ISBLANK(TEXT(QuestionSequence__c))</errorConditionFormula>
        <errorMessage>Please fill in all fields of CAP Global Master Data.</errorMessage>
    </validationRules>
</CustomObject>